updata + add surface article

--- a/1-screening.tex
+++ b/1-screening.tex
@@ -10,7 +10,7 @@
 
 \subsection{Introduction and Concepts}
 
-\subsubsection{Adsorption isotherms and geometrical Descriptors}
+\subsubsection{Adsorption Isotherms and Geometrical Descriptors}
 
 %General introduction
 Nanoporous materials are defined as materials with a nanoscale structure constituted by pores and cavities, which some are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By adhering molecules from a liquid or gas phase into the internal surfaces of the material, we can use it in diverse applications such as gas separation and purification,\cite{Li_2009,Lagorsse_2007} energy storage and conversion,\cite{Morris_2008,Qiu_2020} heterogeneous catalysis\cite{Bell_2003,Singh_2019,Pascanu_2019} drug delivery,\cite{Della_Rocca_2011,Bernini_2014} or sensing.\cite{Breslin_1976} By designing the chemical nature, size, shape and distribution of the pores, we can tailor the physicochemical properties to the targeted application.\cite{Yan_2020}
@@ -32,7 +32,7 @@ The cavities of the nanoporous material lay out an incredibly large adsorbable s
 
 Beyond the experimental techniques, some software like Zeo++ or PoreBlazer focus on computing pore size distributions, surface areas and void fractions using well-defined structure files.\cite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values do not rely on adsorption models or on isotherm data as in the BET area, they are now relying on more comprehensive structural data. They, however, very much rely on a well-designed definition of the volume, the surface and the pore size we want to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we consider.\cite{Hung_2021}. In this thesis, we will rely on these computational methods to define these geometrical descriptors of nanoporous materials.
 
-\subsubsection{Classes of nanoporous Materials}
+\subsubsection{Classes of Nanoporous Materials}
 
 \begin{figure}[ht]
   \centering
@@ -82,10 +82,10 @@ To overcome these new challenges, people are looking increasingly towards transf
 \end{figure*}
 
 
-\section{An overview of screening methodologies}
+\section{Review of Screening Methodologies}
 
 
-\subsection{Non-adsorption properties}
+\subsection{Non-adsorption Properties}
 
 Due to their high internal surface area, adsorption applications were a natural outlet for nanoporous materials. However, these materials can be used in many other applications. This section is dedicated to the physical and chemical properties not directly related to the adsorption process inside nanoporous materials such as catalytic activity,\cite{Singh_2015, Greeley_2006, Back_2020}
 mechanical properties,\cite{Chibani_2019, Gaillac_2020}
@@ -191,7 +191,7 @@ The transport properties screening is based on the calculation of diffusion coef
 
 In its early development, computational screening was mainly used to predict thermodynamic properties in adsorption processes. Three main applications have been identified in the associated literature: gas storage (for energy or medical applications), gas separation (noble gas, hydrocarbons, carbon dioxide, etc.) and post-combustion \ce{CO2} capture. These applications are closely linked to urgent environmental and energy issues that are yet to be solved. Screening can guide the development of better performing materials by shedding light upon unknown structure-property relationship, probes possible theoretical limitations (unreachable targets) and identifies potential candidates that need to be experimentally tested.
 
-\subsubsection{Gas storage}
+\subsubsection{Gas Storage}
 
 One can leverage the high surface density of the nanoporous materials, especially the MOFs, to stock in very low-density gas. In the field of energy storage or transportation, natural gas (mainly methane) or hydrogen are considered plausible alternative fuels to replace conventional ones for transport. The US Department of Energy (US DOE) recently financed research programs and set targets for methane and hydrogen storage. Nanoporous materials could reduce energy, infrastructure and security cost due to the required compression and cooling. In this section, we are focusing on high-throughput screening for methane storage in nanoporous materials, before broadening the scope hydrogen and other perspectives.
 
@@ -212,7 +212,7 @@ More recently, a dataset containing trillions of hypothetical MOFs have been scr
 
 Similarly, computational high-throughput screenings have been applied to other storage applications such as hydrogen storage. Computational screenings showed that cryogenic storage of hydrogen can meet the DOE target of \SI{50}{\gram\per\liter}.\cite{Gomez_Gualdron_2016, Bobbitt_2016, Thornton_2017} Anderson et al.\ performed a large-scale screening based on neural networks to test out multiple pressure/temperature swing conditions to find that the maximal deliverable capacity cannot exceed \SI{62}{\gram\per\liter}.\cite{Anderson_2018} Compared to the density of liquid hydrogen (\SI{72}{\gram\per\liter}), this upper limit seems reasonable since the adsorbent material takes at least {10-20\%} of the tank. Here, we only showed some flagship results of the field. For a more detailed meta-analysis, Bobbitt and Snurr wrote a very complete review on computational high-throughput screening of MOFs for hydrogen storage.\cite{Bobbitt_2019}
 
-\subsubsection{Xenon/krypton Separation}
+\subsection{Gas Separation}
 
 As a representative example of what could be done in the field of gas separation, we are going to focus on Xe/Kr separation. Nanoporous materials can be used as a safer, cheaper and less energy-intensive option for this gas separation. However, experimental design of top-performing materials can be cumbersome. Computational screenings is an ideal tool to kick-start the development of this new technology by identifying rapidly the best candidates.
 
@@ -255,7 +255,7 @@ In 2019, Chung et al.\ screened the most extensive simulation-ready and experime
 After this quick overview of the different screening studies in the field of xenon/krypton separation, we are now going to detail its industrial context, the foreseen top materials that could fulfill the industrial separation and what further studies are needed to better understand the process while discovering new materials.
 
 
-\section{Xenon/krypton separation}
+\section{Separation of Xenon from Krypton}
 
 In this section, we will try to see how we can apply the above-mentioned screening methodologies to help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
 
@@ -291,7 +291,7 @@ The role of a dispatchable source of low-carbon energy can only be fulfilled by 
 Banerjee et al.\ proposed a two-bed system with a first bed filled with MOFs designed for xenon separation and then a second one for radioactive krypton capture.\cite{Banerjee_2014} The authors proposed some examples of material that could be used for this separation unit; more research is needed to find out what the best materials for these separations are. In the following section, we will review the most promising materials for this separation and the structural explaining their high performance. 
 
 
-\subsection{Promising Materials for the xenon/krypton Separation}
+\subsection{Promising Materials for the Separation}
 
 Several experimental reports used the strategy outlined by computational screenings to improve separation properties, as well as tuning the chemical nature of the organic linkers. The main criteria outlined by the different studies on xenon/krypton separation call for pore size tailor-made for xenon and also for maximized interactions with the framework atoms obtained either through the chemical nature or the shape of the cavities. 
 
@@ -299,7 +299,7 @@ In the early phase of the experimental design of materials for the xenon/krypton
 
 More recently, Li et al. proposed a rigid squarate-based MOF with ``perfect pore size'' (comparable with the kinetic diameter of Xe), and an internal pore surface decorated with very polar hydroxyl groups. This material experimentally demonstrated record-high Xe/Kr selectivity of $60.6$ at low pressure (\SI{0.2}{\bar}) and ambient temperature.\cite{Li_2019} Later, Pei et al. discovered even better performing materials with Xe/Kr selectivity of $74.1$ and $103.4$ in the same conditions \SI{0.2}{\bar} and \SI{298}{\kelvin}. In addition to the perfectly tailored pore size, the structure features two oppositely adjacent open metal sites that strongly clamp the adsorbed xenon molecule.\cite{Pei_2022} These studies clearly show the potential of polar sites that preferentially interact with the more polarizable xenon over the krypton, hence explaining these record-breaking separation performances. 
 
-\subsection{From the computer to the test tube: a rare use case}
+\subsection{From the Computer to the Test Tube}
 
 To connect back our study to computational screenings, we are now going to present one of the rare cases of direct contribution of high-throughput screenings to the lab testing of a material. In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,\cite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the rediscovery of SBMOF-1, a promising nanoporous material that was presented one year later.\cite{Banerjee_2016}
 
