--- a/thesis.bib
+++ b/thesis.bib
@@ -2726,3 +2726,104 @@ for Global Competitiveness},
   title = {Environment and exposure to solvent of protein atoms. Lysozyme and insulin},
   journal = {J. Mol. Bio.}
 }
+@article{Willems_2012,
+	doi = {10.1016/j.micromeso.2011.08.020},
+	url = {https://doi.org/10.1016%2Fj.micromeso.2011.08.020},
+	year = 2012,
+	month = {feb},
+	publisher = {Elsevier {BV}},
+	volume = {149},
+	number = {1},
+	pages = {134--141},
+	author = {Thomas F. Willems and Chris H. Rycroft and Michaeel Kazi and Juan C. Meza and Maciej Haranczyk},
+	title = {Algorithms and tools for high-throughput geometry-based analysis of crystalline porous materials},
+	journal = {Microporous and Mesoporous Materials}
+}
+@article{Pinheiro2013,
+  author = { Pinheiro, Marielle and Martin, Richard L. and Rycroft, Chris H. and Jones, Andrew and Iglesia, Enrique and Haranczyk, Maciej },
+  title = { Characterization and comparison of pore landscapes in crystalline porous materials },
+  journal = { Journal of Molecular Graphics and Modelling },
+  year = { 2013 },
+  volume = { 44 },
+  pages = { 208--219 },
+  doi = {10.1016/j.jmgm.2013.05.007},
+  url = {http://doi.org/10.1016/j.jmgm.2013.05.007},
+}
+@article{June_1990,
+	doi = {10.1021/j100367a056},
+	url = {https://doi.org/10.1021/j100367a056},
+	year = 1990,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {94},
+	number = {4},
+	pages = {1508--1516},
+	author = {R. Larry. June and Alexis T. Bell and Doros N. Theodorou},
+	title = {Prediction of low occupancy sorption of alkanes in silicalite},
+	journal = {J. Phys. Chem.}
+}
+@article{KAR2001,
+  doi = {10.1080/00268970110057833},
+  url = {https://doi.org/10.1080/00268970110057833},
+  year = {2001},
+  month = sep,
+  publisher = {Informa {UK} Limited},
+  volume = {99},
+  number = {17},
+  pages = {1517--1521},
+  author = {SUDESHNA KAR and C. CHAKRAVARTY},
+  title = {Computational evaluation of Henry's constants and isosteric heats of sorption for Lennard-Jones sorbates in {Na-Y} zeolite},
+  journal = {Mol. Phys.}
+}
+@article{Sarkisov_2020,
+	doi = {10.1021/acs.chemmater.0c03575},
+	url = {https://doi.org/10.1021%2Facs.chemmater.0c03575},
+	year = 2020,
+	month = {nov},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {32},
+	number = {23},
+	pages = {9849--9867},
+	author = {Lev Sarkisov and Rocio Bueno-Perez and Mythili Sutharson and David Fairen-Jimenez},
+	title = {Materials Informatics with {PoreBlazer} v4.0 and the {CSD} {MOF} Database},
+	journal = {Chem. Mater.}
+}
+@article{Banerjee_2012,
+  doi = {10.1021/cg300274n},
+  url = {https://doi.org/10.1021/cg300274n},
+  year = {2012},
+  month = mar,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {12},
+  number = {5},
+  pages = {2162--2165},
+  author = {Debasis Banerjee and Zhijuan Zhang and Anna M. Plonka and Jing Li and John B. Parise},
+  title = {A Calcium Coordination Framework Having Permanent Porosity and High {CO}$_\text{2}$/{N}$_\text{2}$  Selectivity},
+  journal = {Cryst. Growth Des.}
+}
+@article{Wojdyr_2022,
+	doi = {10.21105/joss.04200},
+	url = {https://doi.org/10.21105/joss.04200},
+	year = 2022,
+	month = {may},
+	publisher = {The Open Journal},
+	volume = {7},
+	number = {73},
+	pages = {4200},
+	author = {Marcin Wojdyr},
+	title = {{GEMMI}: A library for structural biology},
+	journal = {JOSS}
+}
+@article{Vandenbrande2018,
+  doi = {10.1021/acs.jctc.8b00892},
+  url = {https://doi.org/10.1021/acs.jctc.8b00892},
+  year = {2018},
+  month = oct,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {14},
+  number = {12},
+  pages = {6359--6369},
+  author = {Steven Vandenbrande and Michel Waroquier and Veronique Van Speybroeck and Toon Verstraelen},
+  title = {Ab Initio Evaluation of Henry Coefficients Using Importance Sampling},
+  journal = {J. Chem. Theo. Comput.}
+}
